[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/notouppendoor.png" type="Texture" id=1]
[ext_resource path="res://scripts/ConnectedDoor.gd" type="Script" id=2]
[ext_resource path="res://Sounds/door open.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/door close.wav" type="AudioStream" id=4]
[ext_resource path="res://sprites/ouppendoor.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 6 ) ],
"loop": false,
"name": "Open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 53.5359, 105.644 )

[node name="ConnectedDoor" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 34.8247, 31.9843 )
scale = Vector2( 0.0953856, 0.0942919 )
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.94604, 0.280615 )
shape = SubResource( 2 )

[node name="DoorOpen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="DoorClose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Hint" type="Label" parent="."]
visible = false
margin_left = -105.0
margin_top = -177.0
margin_right = -59.0
margin_bottom = -163.0
rect_scale = Vector2( 4, 4 )
rect_clip_content = true
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Press E"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_ConnectedDoor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ConnectedDoor_body_exited"]
